fix: extending view height for all products page to accommodate white space

--- a/public/styles/allproducts.css
+++ b/public/styles/allproducts.css
@@ -157,6 +157,8 @@
 @media (max-width: 414px) {
   .all-products-container {
     height: 90vh;
+    position: relative;
+    overflow-x: hidden;
   }
   .swiper-pagination {
     margin-bottom: 10rem;
